--- a/app/templates/new_pitch.html
+++ b/app/templates/new_pitch.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block content %}
 <div class="container">
     <h1>Welcome to PITCHES</h1>
     <p>You can upload your pitches here for others to see</p>
-    {{pitches.title}}
+    {{wtf.quick_form(pitch_form)}}
 </div>
 {% endblock %}
