--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h1>Welcome to PITCHES</h1>
-    <p>You can upload your pitches here for others to see</p>
-    {{pitches.title}}
+    <p>This are the uploaded pitches:</p>
+    
 </div>
 {% endblock %}
