Add the comment class

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -26,3 +29,4 @@
 
     </div>
 </div>
+{% endblock navbar %}
