--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
+
 {% block content %}
-<div class="container">
+<div>
     <h1>Welcome to PITCHES</h1>
     <p>This are the uploaded pitches:</p>
+
+    <p> To upload new pitches <a href="{{url_for('main.new_pitch')}}">Click here</a></p> 
     
 </div>
 {% endblock %}
