Add some styling

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,8 +1,9 @@
 {% macro displayPitchList(category) %}
 
     {% for pitch in category %}
+    
         <div class="row">
-            
+            <p>Give your feedback on the pitch <a href="{{url_for('main.new_comment')}}">HERE</a></p>
         </div>
 
     {% endfor %}
